--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^5.26.5",
     "@clerk/nextjs": "^5.7.1",
     "@clerk/themes": "^2.1.35",
     "@hookform/resolvers": "^3.9.0",
